--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <li><a href="./Code Sites/Countdown Timers/Countdown Timer/index.html">Countdown Timer</a></li>
         <li><a href="./Code Sites/Countdown Timers/Development Countdown Timer/index.html">Development Countdown Timer</a></li>
         <li><a href="./Code Sites/Countdown Timers/Advanced Timer/index.html">Advanced Countdown Timer</a></li>
+        <li><a href="./Code Sites/Visual recogniser/index.html">Visual Recogniser</a></li>
     </ul>
 </head>
 
