--- a/Code Sites/Web Template/index.html
+++ b/Code Sites/Web Template/index.html
@@ -5,5 +5,6 @@
     </head>
     <body>
         <script type="text/javascript" src="main.js"></script>
+        <a href="../..">Back</a>
     </body>
 </html>
