--- a/index.html
+++ b/index.html
@@ -1,22 +1,13 @@
 <!DOCTYPE html>
-<html>
-
-<head>
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
-    <input type="text" id="mySearch" onkeyup="myFunction()" placeholder="Search.." title="Type in a category">
-
-    <ul id="myMenu">
-        <li><a href="./Code Sites/Web Template/index.html">Web Template</a></li>
-        <li><a href="./Code Sites/Countdown Timers/Countdown Timer/index.html">Countdown Timer</a></li>
-        <li><a href="./Code Sites/Countdown Timers/Development Countdown Timer/index.html">Development Countdown Timer</a></li>
-        <li><a href="./Code Sites/Countdown Timers/Advanced Timer/index.html">Advanced Countdown Timer</a></li>
-        <li><a href="./Code Sites/Visual recogniser/index.html">Visual Recogniser</a></li>
-    </ul>
-</head>
-
-<body>
-    <script type="text/javascript" src="main.js"></script>
-</body>
-
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Kai's Website</title>
+  </head>
+  <body>
+    <canvas id="bg"></canvas>
+    <script type="module" src="/main.js"></script>
+  </body>
 </html>
