--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    
+
     <div class="sideNav" id="sideNav">
         <a href="javascript:void(0)" class="navbarCloseBtn" onclick="closeNav()">☰</a>
         <a href="#sect1" onclick="closeNav()">Section1</a>
@@ -22,39 +22,45 @@
         <a href="#sect3" onclick="closeNav()">Section3</a>
         <a href="#sect4" onclick="closeNav()">Section4</a>
         <a href="#sect5" onclick="closeNav()">Section5</a>
-        <a href="#sect6" onclick="closeNav()">Section6</a>
     </div>
 
     <a class="openNav" onclick="openNav()" style="font-size:30px;cursor:pointer">☰</a>
 
     <div class="main">
+
         <div class="parallax_wrapper">
-            <div class="parallax_group intro_screen" id="sect1 intro">
+
+            <div class="parallax_group intro_screen">
                 <h1>Hi, I'm Kai</h1>
             </div>
 
             <div class="parallax_group" id="group-1">
-                <div class="parallax_layer base_layer" id="sect2">
+                <div class="parallax_layer base_layer">
                     <h4>I am a 13 year old with an inexperienced skill of web development</h4>
                 </div>
-                <div class="parallax_layer top_layer" id="sect3 ">
+                <div class="parallax_layer top_layer">
                     <h4>13?!?!?!</h4>
                 </div>
             </div>
 
+            <div class="parallax_group">
+            </div>
+
             <div class="parallax_group" id="group-2">
-                <div class="parallax_layer mid_layer" id="sect4">
-                    <h4>Mid layer</h4>
+                <div class="parallax_layer base_layer">
+                    <h4>But do you know what I struggle with most?</h4>
                 </div>
-                <div class="parallax_layer top_layer" id="sect5">
-                    <h4>Top layer</h4>
+                <div class="parallax_layer mid_layer">
+                    <h4>Time, money and AGE</h4>
                 </div>
             </div>
 
-            <div class="parallax_group outro_screen" id="sect6 outro">
+            <div class="parallax_group outro_screen" id="outro">
                 <h4>The End</h4>
             </div>
+
         </div>
+
     </div>
 
     <script type="text/javascript" src="main.js"></script>
