--- a/index.html
+++ b/index.html
@@ -57,9 +57,13 @@
 
             <div class="parallax_group outro_screen" id="outro">
                 <h4>The End</h4>
-            </div>
 
+            </div>
+            <footer class="contact_me">
+                <a href="./contact/emailer.html">Contact Me</a>
+            </footer>
         </div>
+
 
     </div>
 
