--- a/sites/PlaceholderSite/index.html
+++ b/sites/PlaceholderSite/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
-    <title>Document</title>
+    <title>Placeholder Site</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <script src="https://cdn.jsdelivr.net/npm/kute.js@2.1.2/dist/kute.min.js"></script>
 </head>
@@ -55,7 +55,7 @@
                     fill="#ff617b"></path>
             </g>
 
-            <g transform="translate(438.8798154210251 319.04966494084266)" style="visibility: hidden;">
+            <g transform="translate(438.8798154210251 319.04966494084266) scale(-1)" style="visibility: hidden;">
                 <path id="blob2"
                     d="M87 -147.4C123.9 -129.3 172.8 -128.6 194.3 -107C215.8 -85.3 209.9 -42.7 208.3 -0.9C206.7 40.8 209.5 81.7 197.1 119.2C184.8 156.7 157.4 190.9 122 201C86.7 211.1 43.3 197.1 8.8 181.9C-25.8 166.7 -51.7 150.5 -82.3 137.7C-112.9 124.8 -148.2 115.4 -168.1 93C-188.1 70.7 -192.5 35.3 -183.7 5.1C-174.9 -25.2 -152.8 -50.3 -145 -93.6C-137.2 -136.9 -143.6 -198.4 -121.8 -225.3C-100 -252.2 -50 -244.6 -12.5 -223C25 -201.3 50 -165.6 87 -147.4"
                     fill="#ff617b"></path>
