--- a/404.html
+++ b/404.html
@@ -1,1 +1,14 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
+    <title>404</title>
+</head>
+<body>
+    <h1>Oops! We could't find the page you were looking for, please check for any typos or head back to the <a href="./index.html">home</a> page.</h1>
+    
+</body>
+</html>
