--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
+    <script src="https://www.gstatic.com/firebasejs/ui/6.0.0/firebase-ui-auth.js"></script>
+    <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/6.0.0/firebase-ui-auth.css" />
     <title>My Portfolio</title>
     <link rel="stylesheet" type="text/css" href="./css/everything_else/style.css">
     <link rel="stylesheet" type="text/css" href="./css/side_bar/sidebar.css">
@@ -59,7 +61,7 @@
 
     </div>
 
-    <script type="text/javascript" src="main.js"></script>
+    <script type="text/javascript" src="bundle.js"></script>
 </body>
 
 </html>
