--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
     </div>
 
-    <script type="text/javascript" src="bundle.js"></script>
+    <script type="text/javascript" src="main.js"></script>
 </body>
 
 </html>
