--- a/404.html
+++ b/404.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" type="text/css" href="./css/404/style.css">
 </head>
 <body>
-    <h1>Oops! We could't find the page you were looking for, please check for any typos or head back to the <a href="./index.html">home</a> page.</h1>
+    <h1>Oops! We could't find the page you were looking for, please check for any typos or head back to the home page by pressing the button below.</h1>
+    <form method="get" action="./index.html"><button type="submit" class="button">Back</button></form>
     
 </body>
 </html>
