--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
             <div class="parallax_group" id="group-1">
                 <div class="parallax_layer base_layer">
-                    <h4>I am a 13 year old with an inexperienced self-taught skill of web development</h4>
+                    <h4>I am a 13 year old with a self-taught skill of web development</h4>
                 </div>
                 <div class="parallax_layer top_layer">
                     <h4>13?!?!?!</h4>
