--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <div class="parallax_layer base_layer">
                     <h4>But do you know what I struggle with most?</h4>
                 </div>
-                <div class="parallax_layer mid_layer">
+                <div class="parallax_layer top_layer">
                     <h4>Time, money and AGE</h4>
                 </div>
             </div>
