--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <div class="sideNav" id="sideNav">
         <a href="javascript:void(0)" class="navbarCloseBtn" onclick="closeNav()">☰</a>
-        <a href="#sect1" onclick="closeNav()">Section1</a>
+        <a href=".\sites\PlaceholderSite\index" onclick="closeNav()">Placeholder Site</a>
     </div>
 
     <a class="openNav" onclick="openNav()" style="font-size:30px;cursor:pointer">☰</a>
