--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <div class="sideNav" id="sideNav">
         <a href="javascript:void(0)" class="navbarCloseBtn" onclick="closeNav()">☰</a>
         <a href=".\sites\PlaceholderSite\index" onclick="closeNav()">Placeholder Site</a>
+        <a href="./hi/" onclick="closeNav()">hi hello</a>
     </div>
 
     <a class="openNav" onclick="openNav()" style="font-size:30px;cursor:pointer">☰</a>
