--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <a href="javascript:void(0)" class="navbarCloseBtn" onclick="closeNav()">☰</a>
         <a href=".\sites\PlaceholderSite\index" onclick="closeNav()">Placeholder Site</a>
         <a href="./hi/" onclick="closeNav()">hi hello</a>
+        <a href="./sites/Games/NoughtsAndCrosses/" onclick="closeNav()">Noughts And Crosses</a>
     </div>
 
     <a class="openNav" onclick="openNav()" style="font-size:30px;cursor:pointer">☰</a>
