--- a/404.html
+++ b/404.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
     <title>404</title>
-    <link rel="stylesheet" type="text/css" href="./css/404/style.css">
+    <link rel="stylesheet" type="text/css" href="homehacks.tk/css/404/style.css">
 </head>
 <body>
     <h1>Oops! We could't find the page you were looking for, please check for any typos or head back to the home page by pressing the button below.</h1>
