--- a/404.html
+++ b/404.html
@@ -10,7 +10,6 @@
 </head>
 <body>
     <h1>Oops! We could't find the page you were looking for, please check for any typos or head back to the home page by pressing the button below.</h1>
-    <form method="get" action="./"><button type="submit" class="button">Back</button></form>
-    
+    <button type="submit" class="button" onclick="window.location.href = 'https://homehacks.tk/'">Back</button>
 </body>
 </html>
