--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <a href=".\sites\PlaceholderSite\index" onclick="closeNav()">Placeholder Site</a>
         <a href="./hi/" onclick="closeNav()">hi hello</a>
         <a href="./sites/Games/NoughtsAndCrosses/" onclick="closeNav()">Noughts And Crosses</a>
+        <a href="./sites/Games/Snake/" onclick="closeNav()">Snake</a>
     </div>
 
     <a class="openNav" onclick="openNav()" style="font-size:30px;cursor:pointer">☰</a>
